added the input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
   </div>
 </div>
 <input id="preview" type="file" (change)="previewImage($event)" />
+{{ lastmodifiedDate }}
 
 <div class="w-100 position-absolute top-0" *ngIf="modalVersion">
   <div class="alert alert-secondary m-2">
